# Diplom

./: .dockerignore  .gitignore  Dockerfile  README.md  READMEREPORT.md  conftest.py  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  start.py
core/: __init__.py  agent_core.py  agent_roles.py  context_core.py  dialogue_engine.py  graph_core.py  graph_initializer.py  graph_traversal.py  personality_core.py  scenario_engine.py  speech_dna.py  style_engine.py  system_core.py
data/: autonomous_graph_snapshot.json  autonomous_graph_test_texts.txt  living_system.db-shm  living_system.db-wal  mental_health_verified_sources.json
data/project_backups/: project_backup_20260227_190443_unit_test.json  project_backup_20260227_193739_unit_test.json  project_backup_20260227_212037_unit_test.json  project_backup_20260228_114251_unit_test.json  project_backup_20260228_123629_unit_test.json  project_backup_20260228_124320_unit_test.json  project_backup_20260228_125524_unit_test.json  (+9 more)
docs/: core_system_design.md  devops_security_integration.md  integration_layer_sdk.md  living_system_architecture.md  roadmap.md  ui_workspaces.md
infra/nginx/: nginx-http.conf  (+3 more)
models/: README.md
roaches_viz/: __init__.py  __main__.py  conftest.py
runtime/: __init__.py  task_queue.py
src/: __init__.py
style_tests/: __init__.py  run_style_tests.py  style_embedding_tests.py  style_generation_tests.py  style_isolation_tests.py  style_learning_tests.py  style_metrics.py
webapp/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+184 files in other folders)
