[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-project"
version = "0.1.0"
description = "Unified graph workspace with RoachesViz cognitive engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "python-multipart",
  "neo4j",
  "slowapi",
  "prometheus-fastapi-instrumentator",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "roaches_viz*", "core*"]
